prog/com/rath/umbra/Parser.java
/* Parser.java */
/* Generated By:JavaCC: Do not edit this line. Parser.java */
package com.rath.umbra;

import java.io.*;
import java.util.List;
import java.util.ArrayList;

public class Parser implements ParserConstants {

  public Program parse() {

    try {
      return PROGRAM();
    } catch (TokenMgrError tme) {
      System.err.println(tme.getMessage);
      return null;
    } catch (ParseException pe) {
      System.err.println(pe.getMessage);
      return null;
    }

  }

// --------------------------------------------------------------------------------------------------------------------
// Grammar
  final public 
Program PROGRAM() throws ParseException {
    trace_call("PROGRAM");
    try {List<ParamDeclaration> paramDeclList = new ArrayList<ParamDeclaration>();
  List<FunctionDeclaration> funcDeclList = new ArrayList<FunctionDeclaration>();
  MainDeclaration mainDecl;
  ParamDeclaration pd;
  FunctionDeclaration fd;
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 36:{
          ;
          break;
          }
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        pd = PARAM_DECLARATION();
paramDeclList.add(pd);
      }
      mainDecl = MAIN_DECLARATION();
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 40:{
          ;
          break;
          }
        default:
          jj_la1[1] = jj_gen;
          break label_2;
        }
        fd = FUNCTION_DECLARATION();
funcDeclList.add(fd);
      }
      jj_consume_token(0);
{if ("" != null) return new Program(paramDeclList, mainDecl, funcDeclList);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PROGRAM");
    }
  }

  final public MainDeclaration MAIN_DECLARATION() throws ParseException {
    trace_call("MAIN_DECLARATION");
    try {StatementList body;
      jj_consume_token(39);
      jj_consume_token(24);
      body = STATEMENT_LIST();
      jj_consume_token(25);
{if ("" != null) return new MainDeclaration(body);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("MAIN_DECLARATION");
    }
  }

  final public FunctionDeclaration FUNCTION_DECLARATION() throws ParseException {
    trace_call("FUNCTION_DECLARATION");
    try {Token name;
  ArgList argList;
  StatementList body;
      jj_consume_token(40);
      name = jj_consume_token(IDENTIFIER);
      jj_consume_token(SEP_LPAREN);
      argList = ARG_LIST();
      jj_consume_token(SEP_RPAREN);
      jj_consume_token(24);
      body = STATEMENT_LIST();
      jj_consume_token(25);
{if ("" != null) return new FunctionDeclaration(name, argList, body);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("FUNCTION_DECLARATION");
    }
  }

  final public ParamDeclaration PARAM_DECLARATION() throws ParseException {
    trace_call("PARAM_DECLARATION");
    try {Token id;
  Token value;
      jj_consume_token(36);
      id = jj_consume_token(IDENTIFIER);
      jj_consume_token(OP_EQUAL);
      value = jj_consume_token(LIT_GENERAL);
      jj_consume_token(29);
{if ("" != null) return new ParamDeclaration(id, value);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PARAM_DECLARATION");
    }
  }

  final public ArgList ARG_LIST() throws ParseException {
    trace_call("ARG_LIST");
    try {ArgListHead head;
  List<ArgListTail> tail = new ArrayList<ArgListTail>();
  ArgListTail t;
      head = ARG_LIST_HEAD();
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 28:{
          ;
          break;
          }
        default:
          jj_la1[2] = jj_gen;
          break label_3;
        }
        t = ARG_LIST_TAIL();
tail.add(t);
      }
{if ("" != null) return new ArgList(head, tail);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("ARG_LIST");
    }
  }

  final public ArgListHead ARG_LIST_HEAD() throws ParseException {
    trace_call("ARG_LIST_HEAD");
    try {Token id;
      jj_consume_token(34);
      id = jj_consume_token(IDENTIFIER);
{if ("" != null) return new Variable(id.image());}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("ARG_LIST_HEAD");
    }
  }

  final public ArgListTail ARG_LIST_TAIL() throws ParseException {
    trace_call("ARG_LIST_TAIL");
    try {Token id;
      jj_consume_token(28);
      jj_consume_token(34);
      id = jj_consume_token(IDENTIFIER);
{if ("" != null) return new Variable(id.image());}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("ARG_LIST_TAIL");
    }
  }

  final public StatementList STATEMENT_LIST() throws ParseException {
    trace_call("STATEMENT_LIST");
    try {List<Statement> list = new ArrayList<Statement>();
  Statement st;
      label_4:
      while (true) {
        st = STATEMENT();
list.add(st);
        if (jj_2_1(2)) {
          ;
        } else {
          break label_4;
        }
      }
{if ("" != null) return new StatementList(list);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("STATEMENT_LIST");
    }
  }

  final public Statement STATEMENT() throws ParseException {
    trace_call("STATEMENT");
    try {Operation operation;
  ControlStructure controlStructure;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OP_EXCL:
      case SEP_LPAREN:
      case 33:
      case 34:
      case 35:
      case 42:
      case IDENTIFIER:
      case REFERENCE:
      case LIT_GENERAL:{
        operation = OPERATION();
{if ("" != null) return new Operation(operation);}
        break;
        }
      case 37:
      case 41:
      case 43:{
        controlStructure = CONTROL_STRUCTURE();
{if ("" != null) return new ControlStructure(controlStructure);}
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("STATEMENT");
    }
  }

  final public Operation OPERATION() throws ParseException {
    trace_call("OPERATION");
    try {SetOperation setOperation;
  VarDeclaration varDeclaration;
  VarInitialization varInitialization;
  ReturnOperation returnOperation;
  Expression expr;
      if (jj_2_2(3)) {
        setOperation = SET_OPERATION();
{if ("" != null) return new SetOperation(setOperation);}
      } else if (jj_2_3(3)) {
        varDeclaration = VAR_DECLARATION();
{if ("" != null) return new VarDeclaration(varDeclaration);}
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 34:{
          varInitialization = VAR_INITIALIZATION();
{if ("" != null) return new VarInitialization(varInitialization);}
          break;
          }
        case 42:{
          returnOperation = RETURN_OPERATION();
{if ("" != null) return new ReturnOperation(returnOperation);}
          break;
          }
        case OP_EXCL:
        case SEP_LPAREN:
        case 33:
        case IDENTIFIER:
        case REFERENCE:
        case LIT_GENERAL:{
          expr = EXPRESSION();
{if ("" != null) return new Expression(expr);}
          break;
          }
        default:
          jj_la1[4] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(29);
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("OPERATION");
    }
  }

  final public ControlStructure CONTROL_STRUCTURE() throws ParseException {
    trace_call("CONTROL_STRUCTURE");
    try {ConditionalBranch conditionalBranch;
   WhileLoop whileLoop;
   ForLoop forLoop;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 37:{
        conditionalBranch = CONDITIONAL_BRANCH();
{if ("" != null) return new ConditionalBranch(conditionalBranch);}
        break;
        }
      case 43:{
        whileLoop = WHILE_LOOP();
{if ("" != null) return new WhileLoop(whileLoop);}
        break;
        }
      case 41:{
        forLoop = FOR_LOOP();
{if ("" != null) return new ForLoop(forLoop);}
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("CONTROL_STRUCTURE");
    }
  }

  final public SetOperation SET_OPERATION() throws ParseException {
    trace_call("SET_OPERATION");
    try {Token id;
  Expression expr;
      jj_consume_token(35);
      id = jj_consume_token(IDENTIFIER);
      jj_consume_token(OP_EQUAL);
      expr = EXPRESSION();
{if ("" != null) return new SetOperation(id, expr);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("SET_OPERATION");
    }
  }

  final public VarDeclaration VAR_DECLARATION() throws ParseException {
    trace_call("VAR_DECLARATION");
    try {Token id;
      jj_consume_token(34);
      id = jj_consume_token(IDENTIFIER);
{if ("" != null) return new Variable(id.image());}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("VAR_DECLARATION");
    }
  }

  final public VarInitialization VAR_INITIALIZATION() throws ParseException {
    trace_call("VAR_INITIALIZATION");
    try {Token id;
  Expression expr;
      jj_consume_token(34);
      id = jj_consume_token(IDENTIFIER);
      jj_consume_token(OP_EQUAL);
      expr = EXPRESSION();
{if ("" != null) return new VarInitialization(id, expr);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("VAR_INITIALIZATION");
    }
  }

  final public ReturnOperation RETURN_OPERATION() throws ParseException {
    trace_call("RETURN_OPERATION");
    try {Expression expr;
      jj_consume_token(42);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OP_EXCL:
      case SEP_LPAREN:
      case 33:
      case IDENTIFIER:
      case REFERENCE:
      case LIT_GENERAL:{
        expr = EXPRESSION();
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        ;
      }
{if ("" != null) return new ReturnOperation(expr);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("RETURN_OPERATION");
    }
  }

  final public ConditionalBranch CONDITIONAL_BRANCH() throws ParseException {
    trace_call("CONDITIONAL_BRANCH");
    try {Expression ifExpr;
  List<Expression> elsifExprList = new ArrayList<Expression>();
  Expression elseExpr;

  StatementList ifBody;
  List<StatementList> elsifStatementBodyList = new ArrayList<StatementList>();
  Expression elseBody;

  Expression elsifExpr;
  StatementList elsifStatementList;
      jj_consume_token(37);
      jj_consume_token(SEP_LPAREN);
      ifExpr = EXPRESSION();
      jj_consume_token(SEP_RPAREN);
      jj_consume_token(24);
      ifBody = STATEMENT_LIST();
      jj_consume_token(25);
      label_5:
      while (true) {
        if (jj_2_4(2)) {
          ;
        } else {
          break label_5;
        }
        jj_consume_token(38);
        jj_consume_token(37);
        jj_consume_token(SEP_LPAREN);
        elsifExpr = EXPRESSION();
elsifExprList.add(elsifExpr);
        jj_consume_token(SEP_RPAREN);
        jj_consume_token(24);
        elsifStatementList = STATEMENT_LIST();
elsifStatementBodyList.add(elsifStatementList);
        jj_consume_token(25);
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 38:{
        jj_consume_token(38);
        jj_consume_token(SEP_LPAREN);
        elseExpr = EXPRESSION();
        jj_consume_token(SEP_RPAREN);
        jj_consume_token(24);
        elseBody = STATEMENT_LIST();
        jj_consume_token(25);
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        ;
      }
{if ("" != null) return new ConditionalBranch(ifExpr, elsifExprList, elseExpr, ifBody, elsifStatementBodyList, elseBody);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("CONDITIONAL_BRANCH");
    }
  }

  final public WhileLoop WHILE_LOOP() throws ParseException {
    trace_call("WHILE_LOOP");
    try {Expression conditional;
  StatementList body;
      jj_consume_token(43);
      jj_consume_token(SEP_LPAREN);
      conditional = EXPRESSION();
      jj_consume_token(SEP_RPAREN);
      jj_consume_token(24);
      body = STATEMENT_LIST();
      jj_consume_token(25);
{if ("" != null) return new WhileLoop(conditional, body);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("WHILE_LOOP");
    }
  }

  final public ForLoop FOR_LOOP() throws ParseException {
    trace_call("FOR_LOOP");
    try {VarInitialization init;
  Expression conditional;
  SetOperation setOperation;
  StatementList body;
      jj_consume_token(41);
      jj_consume_token(SEP_LPAREN);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 34:{
        init = VAR_INITIALIZATION();
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        ;
      }
      jj_consume_token(29);
      conditional = EXPRESSION();
      jj_consume_token(29);
      setOperation = SET_OPERATION();
      jj_consume_token(SEP_RPAREN);
      jj_consume_token(24);
      body = STATEMENT_LIST();
      jj_consume_token(25);
{if ("" != null) return new ForLoop(init, conditional, setOperation, body);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("FOR_LOOP");
    }
  }

  final public Expression EXPRESSION() throws ParseException {
    trace_call("EXPRESSION");
    try {Token op;
  ExpressionHead head;
  Expression tail;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SEP_LPAREN:{
        op = jj_consume_token(SEP_LPAREN);
        tail = EXPRESSION();
        jj_consume_token(SEP_RPAREN);
        break;
        }
      case OP_EXCL:{
        op = jj_consume_token(OP_EXCL);
        tail = EXPRESSION();
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        if (jj_2_5(3)) {
          head = EXPRESSION_HEAD();
          op = jj_consume_token(OP_ASL);
          tail = EXPRESSION();
        } else if (jj_2_6(3)) {
          head = EXPRESSION_HEAD();
          op = jj_consume_token(OP_ASR);
          tail = EXPRESSION();
        } else if (jj_2_7(3)) {
          head = EXPRESSION_HEAD();
          op = jj_consume_token(OP_LSL);
          tail = EXPRESSION();
        } else if (jj_2_8(3)) {
          head = EXPRESSION_HEAD();
          op = jj_consume_token(OP_LSR);
          tail = EXPRESSION();
        } else if (jj_2_9(3)) {
          head = EXPRESSION_HEAD();
          op = jj_consume_token(OP_LTE);
          tail = EXPRESSION();
        } else if (jj_2_10(3)) {
          head = EXPRESSION_HEAD();
          op = jj_consume_token(OP_GTE);
          tail = EXPRESSION();
        } else if (jj_2_11(3)) {
          head = EXPRESSION_HEAD();
          op = jj_consume_token(OP_LT);
          tail = EXPRESSION();
        } else if (jj_2_12(3)) {
          head = EXPRESSION_HEAD();
          op = jj_consume_token(OP_GT);
          tail = EXPRESSION();
        } else if (jj_2_13(3)) {
          head = EXPRESSION_HEAD();
          op = jj_consume_token(OP_PLUS);
          tail = EXPRESSION();
        } else if (jj_2_14(3)) {
          head = EXPRESSION_HEAD();
          op = jj_consume_token(OP_HYPHEN);
          tail = EXPRESSION();
        } else if (jj_2_15(3)) {
          head = EXPRESSION_HEAD();
          op = jj_consume_token(OP_ASTER);
          tail = EXPRESSION();
        } else if (jj_2_16(3)) {
          head = EXPRESSION_HEAD();
          op = jj_consume_token(OP_SLASH);
          tail = EXPRESSION();
        } else if (jj_2_17(3)) {
          head = EXPRESSION_HEAD();
          op = jj_consume_token(OP_CARET);
          tail = EXPRESSION();
        } else if (jj_2_18(3)) {
          head = EXPRESSION_HEAD();
          op = jj_consume_token(OP_PERCENT);
          tail = EXPRESSION();
{if ("" != null) return new Expression(op, head, tail);}
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("EXPRESSION");
    }
  }

  final public ExpressionHead EXPRESSION_HEAD() throws ParseException {
    trace_call("EXPRESSION_HEAD");
    try {FunctionCall func;
  Token id;
  Token referenceName;
  Token value;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 33:{
        func = FUNCTION_CALL();
{if ("" != null) return new FunctionCall(func);}
        break;
        }
      case IDENTIFIER:{
        id = jj_consume_token(IDENTIFIER);
{if ("" != null) return new Variable(id.getImage());}
        break;
        }
      case REFERENCE:{
        referenceName = jj_consume_token(REFERENCE);
{if ("" != null) return new Variable(referenceName.getImage());}
        break;
        }
      case LIT_GENERAL:{
        value = jj_consume_token(LIT_GENERAL);
{if ("" != null) return new Variable(value.getImage());}
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("EXPRESSION_HEAD");
    }
  }

  final public FunctionCall FUNCTION_CALL() throws ParseException {
    trace_call("FUNCTION_CALL");
    try {Token id;
  ValueList valueList;
      jj_consume_token(33);
      id = jj_consume_token(IDENTIFIER);
      jj_consume_token(SEP_LPAREN);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OP_EXCL:
      case SEP_LPAREN:
      case 33:
      case IDENTIFIER:
      case REFERENCE:
      case LIT_GENERAL:{
        valueList = VALUE_LIST();
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        ;
      }
      jj_consume_token(SEP_RPAREN);
{if ("" != null) return new FunctionCall(id, valueList);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("FUNCTION_CALL");
    }
  }

  final public ValueList VALUE_LIST() throws ParseException {
    trace_call("VALUE_LIST");
    try {Expression exprHead;
  List<Expression> exprList;
  Expression exprTail;
      exprHead = EXPRESSION();
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 28:{
          ;
          break;
          }
        default:
          jj_la1[12] = jj_gen;
          break label_6;
        }
        jj_consume_token(28);
        exprTail = EXPRESSION();
exprList.add(exprTail);
      }
{if ("" != null) return new ValueList(exprHead, exprList);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("VALUE_LIST");
    }
  }

  private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }
